Safari unit tests sometimes fail an ASSERTion in IOSurface.mm's optionsFor32BitSurface() https://bugs.webkit.org/show_bug.cgi?id=224351 <rdar://problem/76405354>

Reviewed by Wenson Hsieh.

Source/WebCore:

New API test: NavigationSwipeTests.DoNotAssertWhenSnapshottingZeroSizeView

* platform/graphics/cocoa/IOSurface.mm:
(WebCore::IOSurface::IOSurface):
Add assertions that IOSurface size is non-empty at the beginning of the constructor.
We already have downstream ones (e.g. the bytesPerRow and totalBytes
assertions inside optionsFor32BitSurface()), but they are after doing
some math and calling IOSurfaceAlignProperty, so it's tempting to blame
that instead of the input. This way, we fail right at the input, making
it more obvious what's up.

Source/WebKit:

* UIProcess/API/ios/WKWebViewIOS.mm:
(-[WKWebView _takeViewSnapshot]):
Don't take view snapshots for views that have a empty size.
This triggers both the assertions mentioned in the title, and the newly added ones.

Tools:

* TestWebKitAPI/Tests/ios/NavigationSwipeTests.mm:
(TEST):
Add a test that taking navigation snapshots for a 0x0 WKWebView doesn't assert.


Canonical link: https://commits.webkit.org/236324@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275737 268f45cc-cd09-0410-ab3c-d52691b4dbfc